--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,14 +39,12 @@ body {
 
 #content_wrapper {
   position: relative;
-  background-color: blue;
   min-height: 400px;
   max-height: 500px;
   overflow-y: auto;
 }
 
 #central_content {
-  border: 1px solid yellow;
   width: 75%;
   float: left;
   min-height: 350px;
@@ -55,7 +53,7 @@ body {
 }
 
 #side_bar_right {
-  border: 1px solid white;
+  border-left: 1px solid white;
   width: 24%;
   float: right;
 }
@@ -67,6 +65,18 @@ body {
   font-size: 10px;
   width: 100%;
   bottom: 0px;
+}
+
+#side_bar_right {
+  padding-left: 5px;
+}
+
+.side_bar_ul {
+  margin: 0px;
+  margin-left: 20px;
+  padding: 0px;
+  list-style: none;
+  text-transform: capitalize;
 }
 
 .nav_bar {
@@ -93,6 +103,36 @@ body {
 
 .header {
   background-color: #cccccc;
+}
+
+.post_container {
+  width: 90%;
+  margin: 10px auto;
+  text-align: center;
+  border: 1px solid #cccc9a;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
+}
+.post_container .post_title {
+  font-size: 26px;
+  font-weigth: bolder;
+}
+.post_container .post_data_wrapper {
+  background-color: #cccc9a;
+  color: #666666;
+}
+.post_container .post_content {
+  padding: 5px;
+  text-align: left;
+}
+.post_container .post_data {
+  display: inline-block;
+  font-size: 12px;
+  width: auto;
+  margin: 0px 5px;
 }
 
 .login_form {
