--- a/sass_css/sasssheets/style.scss
+++ b/sass_css/sasssheets/style.scss
@@ -25,6 +25,9 @@ body{
     background-color: $border_color;
     padding: 5px;
     margin-bottom: 10px;
+    #login_user_name{
+        padding: 3px 10px;
+    }
 }
 #header_wrapper_logo {
     img{
@@ -64,9 +67,28 @@ body{
     width: 100%;
     bottom: 0px;
 }
-#side_bar_right {
+#login_user_name {
     padding-left: 5px;
+    img{
+        vertical-align:top
+    }
 }
+.div_btn {
+    width: auto;
+    float: right;
+    @include border-radius(10px);
+        display: block;
+        background-color: $link_color;
+        border: 1px solid $background_color;
+    a {
+        padding:3px 10px;
+        text-decoration: none;
+    }
+    a:hover {
+        color: $hover
+    }
+}
+
 .side_bar_ul {
     margin          : 0px;
     margin-left     : 20px;
